Validate openapi.yaml on Cloud Build

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,11 @@ services:
       - javascript
       - -o
       - /local
+  validator:
+    image: openapitools/openapi-generator-cli
+    volumes:
+      - .:/local
+    command:
+      - validate
+      - -i
+      - /local/openapi.yaml
