--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   generator:
-    image: openapitools/openapi-generator-cli
+    image: openapitools/openapi-generator-cli:v4.2.2
     volumes:
       - .:/local
     command:
@@ -13,7 +13,7 @@ services:
       - -o
       - /local
   validator:
-    image: openapitools/openapi-generator-cli
+    image: openapitools/openapi-generator-cli:v4.2.2
     volumes:
       - .:/local
     command:
