Update package name to 'qoodish-api-js-client'

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - javascript
       - -o
       - /local
+      - -c
+      - /local/config.json
   validator:
     image: openapitools/openapi-generator-cli:v4.2.2
     volumes:
