--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qoodish_api",
+  "name": "qoodish-api-js-client",
   "version": "0.0.1",
   "description": "Qoodih_API_",
   "license": "Unlicense",
