--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,7 +24,7 @@ jobs:
           scope: "@yusuke-suzuki"
       - run: yarn
       - run: yarn build
-      - run: yarn publish --access=public --non-interactive
+      - run: yarn publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GPR_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NODE_ENV: production
