--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "projectName": "qoodish-api-js-client"
+  "projectName": "@yusuke-suzuki/qoodish-api-js-client",
+  "moduleName": "QoodishApiJsClient"
 }
