--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "qoodish-api-js-client",
-  "version": "0.0.3",
+  "name": "@yusuke-suzuki/qoodish-api-js-client",
+  "version": "0.0.1",
   "description": "Qoodih_API_",
   "license": "Unlicense",
   "main": "dist/index.js",
