Publish config for npm

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,3 +28,18 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NODE_ENV: production
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.yarnpkg.com/
+          scope: "@yusuke-suzuki"
+      - run: yarn
+      - run: yarn publish --access=public --non-interactive
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.YARN_TOKEN}}
+          NODE_ENV: production
